add some tests for eliminations_controller

--- a/test/fixtures/competitors.yml
+++ b/test/fixtures/competitors.yml
@@ -42,3 +42,10 @@ kajetan:
   sex: M
   club: KS Korona 
   birth_date: 1993-02-04 
+  
+maja: 
+  name: Maja 
+  surname: Rudka
+  sex: F
+  club: KS Korona 
+  birth_date: 2001-02-04 
