--- a/config/database.yml
+++ b/config/database.yml
@@ -11,17 +11,17 @@ default: &default
 
 development:
   <<: *default
-  database: climbing_judge2_development
+  database: climbing_judge_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: climbing_judge2_test
+  database: climbing_judge_test
 
 production:
   <<: *default
-  database: climbing_judge2_production
-  username: climbing_judge2 
-  password: <%= ENV['CLIMBING_JUDGE2_DATABASE_PASSWORD'] %>
+  database: climbing_judge_production
+  username: climbing_judge
+  password: <%= ENV['CLIMBING_JUDGE_DATABASE_PASSWORD'] %>
